Added meta data

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,17 @@
 <html>
 
 <head>
-  <title>2D Vector Field</title>
+  <title>Neon</title>
+  
+  <meta property="og:site_name" content="Neon">
+  <meta property="og:title" content="Neon">
+  <meta property="og:description" content="Generative art piece made using 2d vector fields">
+  <meta property="og:image" content="./example.png">
+  <meta property="og:url" content="https://neon-v1.netlify.com/">
+  <meta name="twitter:title" content="Neon">
+  <meta name="twitter:description" content="Generative art piece made using 2d vector fields">
+  <meta property="twitter:image" content="./example.png">
+
 </head>
 
 <body>
