--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <meta name="twitter:title" content="Neon">
   <meta name="twitter:description" content="Generative art piece made using 2d vector fields">
   <meta property="twitter:image" content="./example.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
+
 
 </head>
 
