Updated range sliders, added analytics

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>Neon</title>
   
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
+
   <meta property="og:site_name" content="Neon">
   <meta property="og:title" content="Neon">
   <meta property="og:description" content="Generative art piece made using 2d vector fields">
@@ -11,14 +13,44 @@
   <meta property="og:url" content="https://neon-v1.netlify.com/">
   <meta name="twitter:title" content="Neon">
   <meta name="twitter:description" content="Generative art piece made using 2d vector fields">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
+  <meta name="twitter:image" content="./example.png">
+  <meta name="twitter:card" content="summary_large_image">
 
-
+  <!-- Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="https://muffinman.io/public/favicon/apple-touch-icon.png?v=v3">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://muffinman.io/public/favicon/favicon-32x32.png?v=v3">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://muffinman.io/public/favicon/favicon-16x16.png?v=v3">
+  <link rel="shortcut icon" href="https://muffinman.io/public/favicon/favicon.ico?v=v3">
 </head>
 
 <body>
   <div id="app"></div>
   <script src="./index.js"></script>
+
+  <script>
+    if (window.location.hostname !== 'localhost') {
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-65023927-2', 'auto');
+      ga('send', 'pageview');
+    }
+  </script>
+  <script>
+    if (window.location.hostname !== 'localhost') {
+      (function() {
+        window.counter = 'https://muffinman_io.goatcounter.com/count';
+
+        var script = document.createElement('script');
+        script.async = 1;
+        script.src = '//gc.zgo.at/count.js';
+        var ins = document.getElementsByTagName('script')[0];
+        ins.parentNode.insertBefore(script, ins);
+      })();
+    }
+  </script>
 </body>
 
 </html>
