--- a/src/index.html
+++ b/src/index.html
@@ -5,27 +5,11 @@
   <title>Neon</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
-
-  <meta property="og:site_name" content="Neon">
-  <meta property="og:title" content="Neon">
-  <meta property="og:description" content="Generative art piece made using 2d vector fields">
-  <meta property="og:image" content="./example.png">
-  <meta property="og:url" content="https://neon-v1.netlify.com/">
-  <meta name="twitter:title" content="Neon">
-  <meta name="twitter:description" content="Generative art piece made using 2d vector fields">
-  <meta name="twitter:image" content="./example.png">
-  <meta name="twitter:card" content="summary_large_image">
-
-  <!-- Icons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://muffinman.io/public/favicon/apple-touch-icon.png?v=v3">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://muffinman.io/public/favicon/favicon-32x32.png?v=v3">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://muffinman.io/public/favicon/favicon-16x16.png?v=v3">
-  <link rel="shortcut icon" href="https://muffinman.io/public/favicon/favicon.ico?v=v3">
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="./index.js"></script>
+  <script src="./index.js" type="module"></script>
 </body>
 
 </html>
