Added favicon back

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,23 @@
 
 <head>
   <title>Neon</title>
-  
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
+
+  <meta property="og:site_name" content="Neon">
+  <meta property="og:title" content="Neon">
+  <meta property="og:description" content="Generative art piece made using 2d vector fields">
+  <meta property="og:image" content="./example.png">
+  <meta property="og:url" content="https://neon-v1.netlify.com/">
+  <meta name="twitter:title" content="Neon">
+  <meta name="twitter:description" content="Generative art piece made using 2d vector fields">
+  <meta name="twitter:image" content="./example.png">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <link rel="icon" href="https://muffinman.io/favicon/purple/icon-32.ico" sizes="any" />
+  <link rel="icon" href="https://muffinman.io/favicon/purple/icon.svg" type="image/svg+xml" />
+  <link rel="apple-touch-icon" href="https://muffinman.io/favicon/purple/icon-180.png" />
+  <link rel="manifest" href="https://muffinman.io/favicon/purple/manifest.webmanifest" />
 </head>
 
 <body>
